--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
+    "scrollreveal": "^4.0.9",
+    "styled-components": "^5.3.3",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2"
   },
@@ -41,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.24"
   }
 }
